--- a/public/popup.html
+++ b/public/popup.html
@@ -6,18 +6,15 @@
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
-    <div class="app">
-      <p class="counter-label">Counter</p>
-      <div id="counter" class="counter"></div>
-      <div class="button-container">
-        <button id="decrementBtn" class="button">-</button>
-        <button id="incrementBtn" class="button">+</button>
+    <div class="popup">
+      <div class="title-box">
+        <h1 class="title">Welcome to My Extension</h1>
       </div>
-
-      <hr class="divider" />
-
-      <p class="title">Chrome Extension is Ready!</p>
-      <p class="subtitle">Start by updating <code>popup.html</code></p>
+      <p class="description">This is a sample popup.</p>
+      <div class="button-container">
+        <button id="optionsButton" class="button">Options</button>
+        <button id="helpButton" class="button">Help</button>
+      </div>
     </div>
 
     <script src="popup.js"></script>
