--- a/public/popup.html
+++ b/public/popup.html
@@ -10,20 +10,28 @@
       <div class="title-box">
         <h1 class="title">Welcome to My Extension</h1>
       </div>
-      <p class="description">This is a sample popup.</p>
+      <form>
+        <div class="form-group">
+          <input
+            type="number"
+            id="number-input"
+            name="number"
+            placeholder="Amount of return papers (max 10)"
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="text"
+            id="text-input"
+            name="text"
+            placeholder="Name of root bookmark folder"
+          />
+        </div>
+      </form>
       <div class="button-container">
-        <button id="optionsButton" class="button">Options</button>
         <button id="helpButton" class="button">Help</button>
       </div>
     </div>
-
     <script src="popup.js"></script>
-
-    <!--
-      This HTML file opens when you click on icon from the toolbar.
-
-      To begin the development, run `npm run watch`.
-      To create a production bundle, use `npm run build`.
-    -->
   </body>
 </html>
