fixed server to return properly. fixed all bugs relating to storing and updating storage values. allows you to send across with limit amount for querying database

--- a/public/popup.html
+++ b/public/popup.html
@@ -16,7 +16,7 @@
             type="number"
             id="number-input"
             name="number"
-            placeholder="Amount of return papers (max 10)"
+            placeholder="Amount of return papers (1-10)"
           />
         </div>
         <div class="form-group">
