changed server side query call layout. changed chrome extension title to be more suitable

--- a/ChromeExtension/public/popup.html
+++ b/ChromeExtension/public/popup.html
@@ -8,7 +8,7 @@
   <body>
     <div class="popup">
       <div class="title-box">
-        <h1 class="title">Welcome to My Extension</h1>
+        <h1 class="title">Dissertation Chrome Extension</h1>
       </div>
       <form>
         <div class="form-group">
